# ClassTopLand

./: CMakeLists.txt  ClassTopLand.sln  Info.plist  README.md  app.icns  main.cpp  res.qrc  resource.rc  setup.iss
ClassTopLand/: ClassTopLand.vcxproj  ClassTopLand.vcxproj.filters  Resource.aps  Resource.rc  config.json  main.cpp  res.qrc  resource.h  table.json
ClassTopLand/qss/: global.qss
ClassTopLand/src/: CloudAPI.h
ClassTopLand/src/AppLog/: AppLog.cpp
ClassTopLand/src/AppendixTableManager/: AppendixTableManager.h
ClassTopLand/src/ClassEditDialog/: ClassEditDialog.h
ClassTopLand/src/CloudSettingsTab/: CloudSettingsTab.cpp  CloudSettingsTab.h  CloudSettingsTab.ui
ClassTopLand/src/DayTimerWidget/: DayTimerWidget.cpp  DayTimerWidget.h
ClassTopLand/src/ExportAPISettingsTab/: ExportAPISettingsTab.h
ClassTopLand/src/GetStartWidget/: GetStartWidget.cpp  GetStartWidget.h  GetStartWidget.ui
ClassTopLand/src/MainTableWidget/: MainTableWidget.cpp  MainTableWidget.h
ClassTopLand/src/MainWindow/: MainWindow.cpp  MainWindow.h  MainWindow.ui
ClassTopLand/src/PluginWebEngine/: PluginWebEngine.cpp
ClassTopLand/src/SyncingDialog/: SyncingDialog.cpp  SyncingDialog.h
ClassTopLand/src/TableEditWidget/: TableEditWidget.cpp  TableEditWidget.h  TableEditWidget.ui
ClassTopLand/src/ToolBox/: ToolBox.cpp  ToolBox.h
ClassTopLand/src/Utils/: Utils.cpp  Utils.h
ClassTopLand/src/Utils/WidgetBlur/: WidgetBlur.h
ClassTopLand/src/YiyanDialog/: YiyanDialog.cpp  YiyanDialog.h  YiyanDialog.ui
qss/: CloudSettingsTab.qss  global.qss
res/: logo.txt
src/: API.h  CloudAPI.h  VERSION.h
src/AppendixTableManager/: AppendixTableManager.cpp
src/ClassEditDialog/: ClassEditDialog.cpp  ClassEditDialog.ui
src/ClickLabel/: ClickLabel.cpp
src/CloudSettingsTab/: CloudSettingsTab.cpp  CloudSettingsTab.h  CloudSettingsTab.ui
src/DayTimerWidget/: DayTimerWidget.cpp  DayTimerWidget.h
src/ExportAPISettingsTab/: ExportAPISettingsTab.cpp  ExportAPISettingsTab.ui
src/FluentTabWidget/: FluentTabWidget.cpp  FluentTabWidget.h
src/GetStartWidget/: GetStartWidget.cpp  GetStartWidget.h  GetStartWidget.ui
src/GlassHelper/: GlassHelper.cpp  GlassHelper.h
src/MainTableWidget/: MainTableWidget.cpp  MainTableWidget.h  MainTableWidget.ui
src/MainWindow/: MainWindow.cpp  MainWindow.ui
src/NetworkRequests/: NetworkRequests.cpp  NetworkRequests.h
src/PluginWebEngine/: PluginWebEngine.h
src/RollingLabel/: RollingLabel.cpp
src/SyncingDialog/: SyncingDialog.cpp  SyncingDialog.h
src/TableEditWidget/: TableEditWidget.cpp  TableEditWidget.h  TableEditWidget.ui
src/ToolBox/: ToolBox.cpp  ToolBox.h
src/YiyanDialog/: YiyanDialog.cpp  YiyanDialog.h  YiyanDialog.ui
